--- a/src/app/components/nota/nota.component.html
+++ b/src/app/components/nota/nota.component.html
@@ -23,6 +23,6 @@
         </li>
         
        
-            <button  type="submit">EnviarDatos</button>
+            <button  type="submit" [disabled]="formulario.invalid">EnviarDatos</button>
     </ul>
 </form>
