--- a/src/app/components/vernotas/vernotas.component.html
+++ b/src/app/components/vernotas/vernotas.component.html
@@ -39,6 +39,8 @@
               <br>
               <br>
               {{nota.descripcion}}
+              <br>
+              <button class="btneliminar" (click)= "Eliminar(nota)"><span class="material-icons">delete</span></button>
               
             </li>
             
@@ -56,7 +58,8 @@
               <br>
               <br>
               {{nota.descripcion}}
-              
+              <br>
+              <button class="btneliminar" (click)= "Eliminar(nota)"><span class="material-icons">delete</span></button>
             </li>
             
         </div>
